Added category and sub-category

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data source = db_flea_api"
+  },
+  "CloudinarySettings":{
+    "CloudName": "mufeez",
+    "ApiKey": "982822987333525",
+    "ApiSecret": "SnP1R8kL3oeP1-IX0_nqq0Jfa_E"
   }
 }
