added identity with jwt authorization and account controller and roles filtering

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,7 @@
     "CloudName": "mufeez",
     "ApiKey": "982822987333525",
     "ApiSecret": "SnP1R8kL3oeP1-IX0_nqq0Jfa_E"
-  }
+  },
+  "TokenKey": "Your Application token key lies here...",
+  "ExternalApplicationUrl": "https://localhost:9000"
 }
