successfully migrated to postgresql db

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data source = db_flea_api"
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=appUser; Password=mufeez507; Database=dbFleaApp;"
   },
   "CloudinarySettings":{
     "CloudName": "mufeez",
